[gd_scene load_steps=5 format=3 uid="uid://ds41eqoyl05s8"]

[ext_resource type="Script" uid="uid://0ablqnkfyc41" path="res://script/ennemy.gd" id="1_f3frg"]
[ext_resource type="PackedScene" uid="uid://cfmfxjh05sn2u" path="res://scene/beam.tscn" id="2_c481b"]
[ext_resource type="Texture2D" uid="uid://b1p05w2bdukly" path="res://sprite/ennemy.png" id="3_oe3sl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8dqw5"]
radius = 28.0

[node name="Ennemy" type="Area2D"]
script = ExtResource("1_f3frg")
beam_scene = ExtResource("2_c481b")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("3_oe3sl")
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8dqw5")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 24)

[node name="Ennemy_fire_timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Ennemy_fire_timer" to="." method="_on_ennemy_fire_timer_timeout"]
